<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_formulario"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.splashscreen.FormularioActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:text="@string/label_nome"
            style="@style/label"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nome"
            android:id="@+id/etNome" />

        <TextView
            style="@style/label"
            android:text="@string/label_curso" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spCurso"
            android:entries="@array/cursos"
            android:prompt="@string/selecione_curso" />

        <TextView
            style="@style/label"
            android:text="@string/label_periodo" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/rgPeriodo">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/label_manha"
                android:layout_weight="0.5"
                android:id="@+id/rbManha"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/label_noite"
                android:layout_weight="0.5"
                android:id="@+id/rbNoite" />

        </RadioGroup>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_participar"
            android:id="@+id/btParticipar" />

    </LinearLayout>

</ScrollView>
